tests/baselines/reference/parserES5SymbolProperty5.errors.txt
parserES5SymbolProperty5.ts(2,6): error TS2585: 'Symbol' only refers to a type, but is being used as a value here. Do you need to change your target library? Try changing the 'lib' compiler option to es2015 or later.


==== parserES5SymbolProperty5.ts (1 errors) ====
    class C {
        [Symbol.isRegExp]: string;
         ~~~~~~
!!! error TS2585: 'Symbol' only refers to a type, but is being used as a value here. Do you need to change your target library? Try changing the 'lib' compiler option to es2015 or later.
    }